pracaInz/force-app/main/default/objects/Proof_of_Delivery__c/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <label>Additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>