pracaInz/force-app/main/default/objects/Proof_of_Delivery__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Creation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>