pracaInz/force-app/main/default/objects/Proof_of_Delivery__c/fields/Delivered_quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_quantity__c</fullName>
    <inlineHelpText>Total quantity of goods that are delivered.</inlineHelpText>
    <label>Delivered quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>