pracaInz/force-app/main/default/objects/Proof_of_Delivery__c/fields/Delivery_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Shipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Shipment</label>
    <referenceTo>Delivery_Shipment__c</referenceTo>
    <relationshipLabel>Proofs of Delivery</relationshipLabel>
    <relationshipName>Proofs_of_Delivery</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>