pracaInz/force-app/main/default/objects/Proof_of_Delivery__c/fields/Pallet_Delivered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Delivered_Amount__c</fullName>
    <inlineHelpText>Total number of amount that are delivered.</inlineHelpText>
    <label>Pallet delivered amount</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>